sumo/tests/sumo/output/meandata_edgebased/errors/missing_begin_divider/errors.sumo
Error: Empty 'begin' in definition of meandata-edge 'dump_15'.
Quitting (on error).
